<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">KUPME JÍDLO 1.3</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">Android Trivia</string>
    <string name="about_text">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.\n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="title_about_trivia">About Trivia</string>
    <string name="title_trivia_rules">Trivia Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button">HOTOVO</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <string name="new_button">Nový jídelníček</string>
    <string name="old_button">Nahrát starší</string>
    <string name="button_notes">Poznámky</string>
    <string name="image_logo">Logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_po">Po</string>
    <string name="button_ut">Út</string>
    <string name="button_st">St</string>
    <string name="button_ct">Čt</string>
    <string name="button_pa">Pá</string>
    <string name="button_so">So</string>
    <string name="button_ne">Ne</string>
    <string name="label_sn">SNÍDANĚ</string>
    <string name="label_ve">VEČEŘE</string>
    <string name="label_ob">OBĚD</string>
    <string name="sem_napis_ingr">Sem napiš ingredience</string>
    <string name="vyber_jidlo_z_jidelnicku">Vyber jídlo z jídelníčku</string>
    <string name="ingredience">INGREDIENCE</string>
    <string name="nakupak">NÁKUPNÍ SEZNAM</string>
    <string name="label_pozn">POZNÁMKY</string>
    <string name="img_bold">Icon Bold</string>
    <string name="img_ital">Img Italics</string>
    <string name="img_under">Img UNder</string>
</resources>
